[package]
authors = ["Anthony Dodd <Dodd.AnthonyJosiah@gmail.com>"]
categories = ["database", "data-structures"]
description = "An ODM for MongoDB built upon the mongo rust driver."
documentation = "https://docs.rs/wither"
homepage = "https://github.com/thedodd/wither"
keywords = ["mongodb", "database", "bson", "nosql", "odm"]
license = "Apache-2.0"
name = "wither"
readme = "../README.md"
repository = "https://github.com/thedodd/wither"
version = "0.9.0"
edition = "2018"

[dependencies]
chrono = { version = "0.4.38" }
log = { version = "0.4.22" }
mongodb = { version = "3.0.1", default-features = false, features = ["compat-3-0-0"] }
serde = { version = "1", features = ["derive"] }
wither_derive = { version = "0.9.0", path = "../wither_derive", default-features = false }
async-trait = { version = "0.1.81" }
futures = { version = "0.3.30" }
thiserror = { version = "1.0.63" }

[dev-dependencies]
lazy_static = { version = "1.5.0" }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }

[features]
default = [
    "rustls-tls",
    "dns-resolver"
]
rustls-tls = ["mongodb/rustls-tls"]
openssl-tls = ["mongodb/openssl-tls"]
dns-resolver = ["mongodb/dns-resolver"]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
