[package]
authors = ["Hermanto Lim <hermantolim@outlook.com>"]
categories = ["database", "data-structures"]
description = "An ODM for MongoDB built upon the mongo rust driver."
documentation = "https://docs.rs/wither"
homepage = "https://github.com/hermantolim/wither"
keywords = ["mongodb", "database", "bson", "nosql", "odm"]
license = "Apache-2.0"
name = "wither_derive"
readme = "README.md"
repository = "https://github.com/hermantolim/wither"
version = "0.9.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
Inflector = { version = "0.11.4" }
darling = { version = "0.10" }
proc-macro2 = { version = "1.0.86" }
quote = { version = "1" }
serde = { version = "1", features = ["derive"] }
syn = { version = "1", features = ["extra-traits"] }
proc-macro-error = "1"
async-trait = "0.1"

[dev-dependencies]
trybuild = "1.0.27"
wither = { path = "../wither" }
